--- a/DFDDS Source/ui.html
+++ b/DFDDS Source/ui.html
@@ -6,7 +6,7 @@
       const url = URL.createObjectURL(blob);
       const link = document.createElement('a');
       link.href = url;
-      link.download = `design-tokens-${new Date().toISOString().split('T')[0]}.json`;
+      link.download = `design-tokens.json`;
       link.click();
       // Auto-close plugin after a short delay
       setTimeout(() => { window.parent.postMessage({ pluginMessage: { type: 'CLOSE' } }, '*'); }, 500);
